Review 2 - contacts wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@
 
 .contacts {
   justify-self: right;
-  max-width: 240px;
+  max-width: 250px;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
